<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black">

    <com.my_utils.toolbars.BasicToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/marvel_comics_logo_red"
        app:buttonLeftTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:showBackButton="true"
        app:showCloseButton="false"
        app:showTitle="true"
        app:toolbarText="Register"
        app:toolbarTextColor="@color/white" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="192dp"
        app:cardBackgroundColor="@color/marvel_comics_logo_red"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_gravity="bottom"
                android:background="@drawable/drawable_cornered"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_label_register_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/marvel_comics_logo_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        tools:text="Marvel's Spider-man"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_label_register_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/email"
                    android:textColorHint="@color/marvel_comics_logo_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_label_register_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        tools:text="ultimate_spiderman@hotmail.com"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_label_register_password"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="@dimen/margin_4"
                    android:layout_marginEnd="16dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/marvel_comics_logo_red"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_label_register_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_register_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:selectAllOnFocus="true"
                        android:singleLine="true"
                        tools:text="maryjanewatson"
                        android:textColor="@color/black" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/save_register"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@color/marvel_comics_logo_red"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/input_label_register_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.my_utils.CircleImageView
        android:id="@+id/welcome_text"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:elevation="4dp"
        android:scaleType="centerInside"
        android:src="@drawable/empty_profile_icon_add"
        app:layout_constraintBottom_toTopOf="@id/card_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_register"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>